# deepin-wm

./: .gitignore  .mailmap  CHANGELOG.md  HACKING.md  Makefile.am  Makefile.common  README.md  autogen.sh  configure.ac  update_deepin_wm.sh
build-aux/: git-version-gen
data/: Makefile.am  deepin-test.desktop  deepin-wm.css  gala-multitaskingview.desktop.in  gala.desktop  org.pantheon.desktop.gala.gschema.xml.in.in  startdde-test
data/icons/: Makefile.am
debian/: changelog  control  copyright  deepin-wm.install  gsettings-override  postinst  prerm  rules
docs/: Makefile.am
granite/: update_granite.sh
granite/Widgets/: Utils.vala
lib/: Makefile.am  Utils.vala  WindowIcon.vala  WindowManager.vala  gala.deps  gala.pc.in
lib/Granite/: README  style-classes.vala  update_granite.sh
lib/Granite/Drawing/: BufferSurface.vala  Color.vala  Utilities.vala
lib/Granite/Services/: Contractor.vala  ContractorProxy.vala  IconFactory.vala  Logger.vala  Paths.vala  Settings.vala  System.vala
lib/Granite/Widgets/: Utils.vala
lib/Plank/: DockPreferences.vala  FixCode.vala  README  update_plank.sh
lib/Plank/Drawing/: AnimatedRenderer.vala  Color.vala  DockSurface.vala  DockTheme.vala  DrawingService.vala  Easing.vala  Theme.vala
lib/Plank/Services/: Logger.vala  Matcher.vala  Paths.vala  Preferences.vala  System.vala  WindowControl.vala
plugins/: Makefile.am
plugins/maskcorners/: Makefile.am
plugins/notify/: Makefile.am  Notification.vala  NotifyServer.vala
plugins/template/: Makefile.am
plugins/zoom/: Main.vala  Makefile.am
po/: POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  az.po  be.po  bg.po  bs.po  ca.po  ckb.po  cs.po  da.po  de.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  it.po  ja.po  ka.po  ko.po  ky.po  lb.po  lt.po  lv.po  (+25 more)
src/: DBus.vala  DragDropAction.vala  InternalUtils.vala  Main.vala  Makefile.am  Settings.vala  ShadowEffect.vala  WindowManager.vala  WorkspaceManager.vala  granite
src/Background/: Background.vala  BackgroundCache.vala  BackgroundContainer.vala  BackgroundManager.vala  BackgroundSource.vala  SystemBackground.vala
src/Deepin/: .clang-format  .dired  DeepinAnimationImage.vala  DeepinBlurEffect.vala  DeepinCssActor.vala  DeepinCssStaticActor.vala  DeepinFramedBackground.vala  DeepinIMText.vala  DeepinIcon.vala  DeepinMenu.vala  DeepinMultitaskingView.vala  DeepinRoundRectEffect.vala  DeepinTileSelector.vala  DeepinUtils.vala  DeepinWindowBaseContainer.vala  DeepinWindowClone.vala  DeepinWindowCloneBaseContainer.vala  DeepinWindowCloneContainer.vala  DeepinWindowCloneFlowContainer.vala  DeepinWindowCloneThumbContainer.vala  DeepinWindowFlowContainer.vala  DeepinWindowPreviewer.vala  DeepinWindowSwitcher.vala  DeepinWindowSwitcherItem.vala  DeepinWindowSwitcherLayout.vala  DeepinWindowThumbContainer.vala  DeepinWorkspaceAddButton.vala  DeepinWorkspaceClone.vala  DeepinWorkspaceFlowClone.vala  DeepinWorkspaceIndicator.vala  DeepinWorkspaceName.vala  DeepinWorkspaceThumb.vala  DeepinWorkspaceThumbClone.vala  DeepinWorkspaceThumbCloneContainer.vala  DeepinWorkspaceThumbContainer.vala
src/Granite/: README  update_granite.sh
src/Granite/Widgets/: Utils.vala
src/Plank/: FixCode.vala  update_plank.sh
src/Widgets/: DeepinWindowSwitcher.vala  MonitorClone.vala  MultitaskingView.vala  WindowClone.vala  WindowCloneContainer.vala  WindowOverview.vala  WindowSwitcher.vala  WorkspaceClone.vala
vapi/: Makefile.am  clutter-1.0.deps  config.vapi  libdeepin-mutter-fixes.vapi  libdeepin-mutter.vapi  libmutter.vapi
