VAPIS = \
	cogl-fixes.vapi \
	config.vapi \
	libbamf3.vapi \
	gdesktopenums-3.0.vapi \
	gnome-desktop-3.0.vapi \
	libdeepin-mutter.vapi \
	xfixes-4.0.vapi \
	libdeepin-mutter-fixes.vapi \
	$(NULL)

DEPS = \
	libdeepin-mutter.deps \
	gnome-desktop-3.0.deps \
	$(NULL)

EXTRA_DIST = \
	$(VAPIS) \
	$(DEPS) \
	$(NULL)

